welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: missing arguments for method marqueSol in class FlowerPot;
follow this method with `_' if you want to treat it as a partially applied function
marqueSol()
         ^FlowerPot:8: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(Color.yellow)
         ^FlowerPot:12: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:14: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:18: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:23: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.red)
              ^FlowerPot:25: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.cyan)
              ^FlowerPot:30: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.orange)
              ^FlowerPot:34: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.green)
              ^FlowerPot:36: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.Pink)
              ^