welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marqueSol()(c:Color){setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
def Flower()(c:Color){
marqueSol()
avance()
marqueSol(Color.yellow)
droite()
avance()

marqueSol(c)
recule(2)
marqueSol(c)
avance()
gauche()
avance()
marqueSol(c)

		
}
def growFlowers(){
	Flower(Color.red)
	avance(2)
	Flower(Color.cyan)
	recule(4)
	droite()
	avance(2)
	gauche()
	Flower(Color.orange)
	droite()
	avance(2)
	gauche()
	Flower(Color.green)
	recule(6)
	Flower(Color.Pink)
	recule(2)
}
